glpi/02-glpi-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glpi
  namespace: glpi
  labels:
    app: glpi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glpi
  template:
    metadata:
      labels:
        app: glpi
    spec:
      containers:
        - name: glpi
          image: glpi/glpi:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
          volumeMounts:
            - name: glpi-content
              mountPath: /var/www/html/glpi-content
      volumes:
        - name: glpi-content
          persistentVolumeClaim:
            claimName: pvc-glpi-content
