glpi/03-glpi-svc.yaml
apiVersion: v1
kind: Service
metadata:
 name: glpi
 namespace: glpi
 labels:
   app: glpi
spec:
 type: ClusterIP
 selector:
   app: glpi
 ports:
   - name: http
     port: 80
     targetPort: 80
